# kotaemon-src

./: .dockerignore  .gitattributes  AI_GUIDE.md  DEPENDENCY_FIXES.md  Dockerfile  MIGRATION_NOTES.md  Makefile  PROJECT_CONTEXT.md  README.md  RUNNING.md  app.py  config_example.txt  flowsettings.py  gpu_config.py  launch.sh  pyproject.toml  rag_eval_dataset.json  requirements-adobe.txt  requirements-dev.txt  requirements-gpu.txt  requirements-graphrag.txt  requirements.txt  requirements_gerageragera39.txt
.omx/: metrics.json
.omx/state/: notify-fallback-authority-owner.json  update-check.json
dataset/: html_crawler.py
dataset/testing_files/: README.md
libs/kotaemon/tests/: test_mcp_tools.py
scripts/: run_rag_eval.py
src/kotaemon/agents/react/: agent.py
src/kotaemon/agents/rewoo/: agent.py  planner.py  solver.py
src/kotaemon/agents/tools/: base.py  llm.py  mcp.py
src/kotaemon/chatbot/: base.py  simple_respondent.py
src/kotaemon/indices/: vectorindex.py
src/kotaemon/indices/qa/: citation_qa.py  citation_qa_inline.py  format_context.py
src/kotaemon/indices/rankings/: llm.py  llm_scoring.py  llm_trulens.py
src/kotaemon/llms/: cot.py  linear.py
src/kotaemon/loaders/: pdf_loader.py
src/ktem/: main.py
src/ktem/embeddings/: manager.py  ui.py
src/ktem/evaluation/: __init__.py  ragas_eval.py
src/ktem/index/: manager.py
src/ktem/index/file/: pipelines.py  ui.py
src/ktem/index/file/knet/: pipelines.py
src/ktem/llms/: manager.py  ui.py
src/ktem/mcp/: __init__.py  manager.py  ui.py
src/ktem/pages/: evaluation.py  setup.py
src/ktem/pages/chat/: __init__.py
src/ktem/pages/resources/: __init__.py
src/ktem/reasoning/: react.py  rewoo.py  simple.py
src/ktem/reasoning/prompt_optimization/: decompose_question.py  fewshot_rewrite_question.py  mindmap.py  rewrite_question.py  suggest_conversation_name.py  suggest_followup_chat.py
src/ktem/rerankings/: manager.py  ui.py
src/ktem/utils/: render.py  visualize_cited.py
tests/: test_information_panel_ordering.py
