[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kotaemon"
version = "0.1.0"
requires-python = ">=3.11"
description = "RAG-based tool for chatting with your documents"
readme = "README.md"
authors = [
    { name = "@trducng", email = "john@cinnamon.is" },
    { name = "@lone17", email = "ian@cinnamon.is" },
    { name = "@taprosoft", email = "tadashi@cinnamon.is" },
    { name = "@cin-albert", email = "albert@cinnamon.is" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "aioboto3",
    "azure-ai-documentintelligence",
    "beautifulsoup4>=4.12.3,<4.13",
    "chromadb<=0.5.16",
    "click>=8.1.7,<9",
    "cohere>=5.3.2,<6",
    "cookiecutter>=2.6.0,<2.7",
    "docling<=2.5.2",
    "duckduckgo-search>=5.3.1,<6",
    "elasticsearch>=8.13.0,<8.14",
    "fast_langdetect",
    "fastapi<=0.112.1",
    "fastembed",
    "future",
    "googlesearch-python>=1.2.4,<1.3",
    "gradio>=4.31.0,<5",
    "gradiologin",
    "html2text==2024.2.26",
    "langchain>=0.2.17,<0.3",
    "langchain-anthropic>=0.1.23,<0.2",
    "langchain-cohere>=0.1.9,<0.2",
    "langchain-community>=0.2.19,<0.3",
    "langchain-google-genai>=1.0.10,<2",
    "langchain-mistralai>=0.1.13,<0.2",
    "langchain-ollama>=0.1.3,<0.2",
    "langchain-openai>=0.1.25,<0.2",
    "lightrag-hku<=1.3.0",
    "llama-hub>=0.0.79,<0.1.0",
    "llama-index>=0.10.40,<0.11.0",
    "llama-index-vector-stores-chroma>=0.1.9",
    "llama-index-vector-stores-lancedb",
    "llama-index-vector-stores-milvus",
    "llama-index-vector-stores-qdrant",
    "markdown>=3.6,<4",
    "matplotlib",
    "matplotlib-inline",
    "mcp[cli]>=1.0.0",
    "nano-vectordb",
    "ollama",
    "onnxruntime<1.20",
    "openai>=1.23.6,<2",
    "openpyxl>=3.1.2,<3.2",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25.0",
    "pandas>=2.2.2,<2.3",
    "platformdirs>=4.2.1,<5",
    "plotly<6.0.0",
    "pluggy>=1.5.0,<2",
    "pydantic<=2.10.6",
    "pylance",
    "PyMuPDF>=1.23,<=1.24.11",
    "pypdf>=4.2.0,<4.3",
    "python-decouple>=3.8,<4",
    "python-docx>=1.1.0,<1.2",
    "python-dotenv>=1.0.1,<1.1",
    "python-multipart==0.0.12",
    "SQLAlchemy>=2.0.29,<3",
    "sqlmodel>=0.0.16,<0.1",
    "tabulate",
    "tavily-python>=0.4.0",
    "tenacity>=8.2.3,<8.3",
    "theflow>=0.8.6,<0.9.0",
    "tiktoken>=0.6.0,<1",
    "trogon>=0.5.0,<0.6",
    "tzlocal>=5.0",
    "umap-learn==0.5.5",
    "unstructured[all-docs]>=0.16.0",
    "voyageai>=0.3.0",
    "wikipedia>=1.4.0,<1.5",
    "xxhash",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "black",
    "ruff",
    "mypy",
]
gpu = [
    "sentence-transformers>=2.7.0",
]
adobe = [
    "pdfservices-sdk @ git+https://github.com/niallcm/pdfservices-python-sdk.git@bump-and-unfreeze-requirements",
]
ms-graphrag = [
    "graphrag<=0.3.6",
]

[project.scripts]
kotaemon = "kotaemon.cli:main"

[project.urls]
Homepage = "https://cinnamon.github.io/kotaemon/"
Repository = "https://github.com/Cinnamon/kotaemon/"
Documentation = "https://cinnamon.github.io/kotaemon/"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/kotaemon", "src/ktem"]

[tool.codespell]
skip = "*.js,*.css,*.map"
ignore-words-list = "llm,fo"
quiet-level = 3
check-filenames = ""

[tool.isort]
known_first_party = ["kotaemon", "ktem"]
